--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,14 +14,14 @@
   weight = 2
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 3
+  name = "Funding"
+  url = "#funding"
+  weight = 4
 
 [[main]]
   name = "Projects"
   url = "#projects"
-  weight = 4
+  weight = 5
 
 #[[main]]
 #  name = "Tutorials"
@@ -31,14 +31,14 @@
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 5
+  weight = 6
 
 [[main]]
   name = "Group"
   url = "#group"
-  weight = 6
+  weight = 3
 
-    
+
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 # [[main]]
